# RMCS_1

./: .clangd  .gitignore  .gitmodules  Dockerfile  ROBOT-ARM.md  compile_commands.json  docker-compose.yml  字节序与CAN通信详解.md  拉取humble使用方法.md
.devcontainer/: devcontainer.json
.script/: build-rmcs  sync-remote
.script/template/: env_setup.bash  env_setup.zsh
.ssh/: id_rsa  id_rsa.pub
docs/zh-cn/: GO1_Thread_Explanation.md
rmcs_ws/src/rmcs_bringup/config/: myrobot.yaml
rmcs_ws/src/rmcs_core/: CMakeLists.txt  package.xml  plugins.xml
rmcs_ws/src/rmcs_core/src/filter/: MovingAverageFilter.hpp  ramp_filter.hpp
rmcs_ws/src/rmcs_core/src/hardware/: myrobot.cpp
rmcs_ws/src/rmcs_core/src/hardware/device/: dm_motor.hpp  go1_motor.hpp  rs01.hpp  xrobot.hpp
rmcs_ws/src/rmcs_core/src/hardware/unitree_legs/IOPort/: IOPort.h
rmcs_ws/src/rmcs_core/src/hardware/unitree_legs/serialPort/: SerialPort.h
rmcs_ws/src/rmcs_core/src/hardware/unitree_legs/unitreeMotor/: unitreeMotor.h
rmcs_ws/src/rmcs_msgs/: package.xml
rmcs_ws/src/robot_arm/: CMakeLists.txt  package.xml  robot_arm_hardware.xml
rmcs_ws/src/robot_arm/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_arm.srdf  ros2_controllers.yaml
rmcs_ws/src/robot_arm/control/Inc/: My_arm.hpp
rmcs_ws/src/robot_arm/control/Src/: My_arm.cpp
rmcs_ws/src/robot_arm/launch/: moveit.launch.py
rmcs_ws/src/robot_arm/meshes/: Link4.STL  base_link.STL
rmcs_ws/src/robot_arm/rviz/: moveit_config.rviz
rmcs_ws/src/robot_arm/urdf/: robot_arm.urdf.xacro  robot_arm_base.urdf
