<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmcs_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zihanqin2048@gmail.com">Qzh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 声明这是一个消息定义包,告诉 ROS2 这个包包含自定义消息/服务/动作 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- 依赖声明，列出这个包需要的其他 ROS2 包 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
