<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm</name>
  <version>1.0.0</version>
  <description>Robot arm with Unitree GO1 motor hardware interface, MoveIt and Gazebo support</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Control 依赖 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  
  <!-- MoveIt 依赖 -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  
  <!-- URDF/TF 依赖 -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  
  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>